# angry_pixie_pricing

./: .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml  requirements.txt  setup.py
src/angry_pixie_pricing/: __init__.py  main.py
src/angry_pixie_pricing.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/angry_pixie_pricing/analysis/: __init__.py  cost_calculator.py  day_types.py  hourly.py  load_patterns.py  negative_pricing.py  rolling_duck.py
src/angry_pixie_pricing/charts/: __init__.py  load_patterns.py  terminal.py
src/angry_pixie_pricing/data/: __init__.py  base.py  cache.py  electricity_prices.py  energy_charts.py  factory.py
src/angry_pixie_pricing/load_profiles/: __init__.py  base.py  billing.py  calibrated.py  hotel_profiles.py  smart_meter.py  templates.py
src/angry_pixie_pricing/utils/: cli_options.py  color_palettes.py  date_parser.py  filename_generator.py
